--- a/products/service/index.html
+++ b/products/service/index.html
@@ -50,56 +50,90 @@
     *{box-sizing:border-box}
     html,body{margin:0}
     body{font-family:'Noto Sans Thai',system-ui,sans-serif;color:var(--ink);background:var(--bg);line-height:1.6}
+    html{scroll-padding-top:calc(var(--header-h) + 8px)}
+    [hidden]{display:none !important}
 
-    /* ===== Header: fixed glass ===== */
-    .site-header{position:fixed;inset:0 0 auto 0;z-index:1400;background:transparent;border-bottom:1px solid rgba(255,255,255,.14);transition:background .2s ease,backdrop-filter .2s ease,box-shadow .2s ease}
-    .site-header.scrolled{background:rgba(15,23,42,.70);backdrop-filter:saturate(140%) blur(10px);box-shadow:0 8px 26px rgba(2,8,20,.18)}
-    .header-inner{max-width:var(--container);margin:0 auto;display:flex;align-items:center;justify-content:space-between;gap:12px;min-height:var(--header-h);padding:10px 16px}
-    .brand{display:flex;align-items:center;gap:10px;text-decoration:none}
-    .brand-logo{width:42px;height:42px;border-radius:10px;flex:0 0 42px;background:#e8f1ec var(--logo-url) center/cover no-repeat;box-shadow:0 2px 8px rgba(2,8,20,.15)}
-    .brand-name{font-weight:800;color:#fff;font-size:1.02rem;letter-spacing:.2px}
-    .header-right{display:flex;align-items:center;gap:10px}
-
-    .primary-nav{display:flex;align-items:center;gap:12px}
-    .menu{list-style:none;display:flex;gap:8px;margin:0;padding:0}
-    .menu a{display:inline-block;padding:10px 12px;border-radius:10px;color:#fff;text-decoration:none;font-weight:600}
-    .menu a:hover{background:rgba(255,255,255,.12)}
-    .menu a[aria-current="page"]{background:rgba(255,255,255,.18)}
-    .menu a.cta{border:1px solid rgba(255,255,255,.35)}
-    .menu a.cta:hover{background:#fff;color:#0f172a;border-color:#fff}
-
-    .nav-toggle{appearance:none;border:0;background:transparent;cursor:pointer;width:38px;height:38px;border-radius:9px;display:none;align-items:center;justify-content:center}
-    .nav-toggle .bar{position:relative;width:22px;height:2px;background:#fff;border-radius:2px}
-    .nav-toggle .bar::before,.nav-toggle .bar::after{content:"";position:absolute;left:0;right:0;height:2px;background:#fff;border-radius:2px}
-    .nav-toggle .bar::before{top:-7px}.nav-toggle .bar::after{top:7px}
-    .nav-toggle:focus-visible{outline:2px solid #fff;outline-offset:2px}
-
-    /* Header language switch */
-    .lang-switch{display:flex;gap:6px;padding:4px;border:1px solid #e2e8f0;border-radius:999px;background:#ffffffcc;backdrop-filter: blur(8px);box-shadow:0 10px 26px rgba(2,8,20,.12)}
-    .site-header.scrolled .lang-switch{background:#ffffffdd}
-    .lang-btn{appearance:none;border:0;background:transparent;cursor:pointer;padding:6px 10px;border-radius:999px;font-weight:800;display:flex;align-items:center;gap:6px;color:#0f172a}
-    .lang-btn[aria-pressed="true"]{background:var(--brand-2);color:#fff}
-    .flag{width:18px;height:14px;border-radius:2px;object-fit:cover;box-shadow:0 0 0 1px rgba(0,0,0,.08)}
-
-    @media (max-width:920px){
-      .menu{position:fixed;left:12px;right:12px;top:calc(var(--header-h) + 8px);background:#0f172acc;backdrop-filter: blur(8px);border:1px solid rgba(255,255,255,.18);border-radius:14px;transform:translateY(-12px);opacity:0;pointer-events:none;display:grid;gap:6px;padding:12px;transition:transform .2s ease,opacity .2s ease;z-index:1400}
-      .menu li a{display:block;padding:12px 14px;border-radius:10px}
-      .site-header.open .menu{transform:none;opacity:1;pointer-events:auto}
-      .nav-toggle{display:inline-flex}
+    /* ===== Header: Nickel-style (sticky, gradient, white text) ===== */
+    .site-header{
+      position:sticky; top:0; left:0; right:0; z-index:1400;
+      background:linear-gradient(180deg, rgba(4,10,22,.66), rgba(4,10,22,0));
+      border-bottom:1px solid rgba(255,255,255,.12);
+      transition:background .2s ease, box-shadow .2s ease, border-color .2s ease;
+      -webkit-backdrop-filter: blur(6px); backdrop-filter: blur(6px);
     }
+    .site-header.scrolled{
+      background:#0f172acc; border-color:rgba(255,255,255,.2); box-shadow:0 6px 22px rgba(2,8,20,.18);
+    }
+    .header-inner{max-width:var(--container); margin:0 auto; min-height:var(--header-h);
+      display:flex; align-items:center; justify-content:space-between; padding:10px 16px;}
+    .brand{display:flex; align-items:center; gap:10px; text-decoration:none}
+    .brand-logo{width:44px;height:44px;border-radius:10px;flex:0 0 44px;background:#dfe9e3 var(--logo-url) center/cover no-repeat; box-shadow:0 2px 9px rgba(2,8,20,.14)}
+    .brand-name{font-weight:800; color:#fff; font-size:1.04rem; letter-spacing:.2px}
+
+    .header-right{display:flex; align-items:center; gap:10px}
+    .primary-nav{display:flex; align-items:center}
+    .menu{list-style:none; display:flex; gap:6px; margin:0; padding:0}
+    .menu a{display:inline-block; padding:10px 12px; border-radius:12px; color:#fff; text-decoration:none; font-weight:700; letter-spacing:.2px}
+    .menu a:hover{ background:rgba(255,255,255,.12) }
+    .menu a[aria-current="page"]{ background:rgba(255,255,255,.18) }
+
+    /* Desktop language beside menu */
+    .lang-inline{display:none; align-items:center; gap:6px; padding:4px; border:1px solid rgba(255,255,255,.28); border-radius:999px; background:rgba(255,255,255,.12)}
+    .lang-inline .lang-btn{appearance:none; border:0; background:transparent; cursor:pointer; padding:6px 10px; border-radius:999px; font-weight:800; display:flex; align-items:center; gap:6px; color:#fff}
+    .lang-inline .lang-btn[aria-pressed="true"]{ background:#fff; color:#0f172a }
+    .flag{ width:18px; height:14px; border-radius:2px; object-fit:cover; box-shadow:0 0 0 1px rgba(0,0,0,.08) }
+
+    /* Mobile hamburger + slide-down menu */
+    .nav-toggle{appearance:none; border:0; background:transparent; cursor:pointer; width:38px;height:38px;border-radius:9px;display:none; align-items:center; justify-content:center}
+    .nav-toggle:focus-visible{ outline:2px solid #ffffff; outline-offset:2px }
+    .nav-toggle .bar{ position:relative; width:22px; height:2px; background:#fff; border-radius:2px }
+    .nav-toggle .bar::before,.nav-toggle .bar::after{ content:""; position:absolute; left:0; right:0; height:2px; background:#fff; border-radius:2px }
+    .nav-toggle .bar::before{ top:-7px } .nav-toggle .bar::after{ top:7px }
+
+    /* Language inside mobile menu */
+    .menu .lang-li{display:none; margin-top:6px; padding:10px; border-top:1px solid rgba(255,255,255,.18)}
+    .menu .lang-li .lang-group{display:flex; gap:6px; padding:4px; border-radius:999px; background:rgba(255,255,255,.12); border:1px solid rgba(255,255,255,.28)}
+    .menu .lang-li .lang-btn{appearance:none;border:0;background:transparent;cursor:pointer;padding:6px 10px;border-radius:999px;font-weight:800;color:#fff;display:flex;align-items:center;gap:6px}
+    .menu .lang-li .lang-btn[aria-pressed="true"]{background:#fff;color:#0f172a}
+
+    @media (min-width: 921px){ .lang-inline{display:flex} .menu .lang-li{display:none} }
+    @media (max-width: 920px){
+      .menu{
+        position:fixed; left:12px; right:12px; top:calc(var(--header-h) + 10px);
+        background:#0f172acc; -webkit-backdrop-filter: blur(10px); backdrop-filter: blur(10px);
+        border:1px solid rgba(255,255,255,.16); border-radius:16px;
+        transform:translateY(-12px); opacity:0; pointer-events:none;
+        display:grid; gap:6px; padding:12px; transition:transform .2s, opacity .2s; z-index:1400;
+      }
+      .menu li a{ display:block; padding:12px 14px; border-radius:12px }
+      .site-header.open .menu{ transform:none; opacity:1; pointer-events:auto }
+      .nav-toggle{ display:inline-flex }
+      .lang-inline{ display:none }
+      .menu .lang-li{display:block}
+    }
+
     .menu-scrim{position:fixed;inset:0;background:rgba(2,8,20,.28);z-index:1300;display:none}
     .menu-scrim:not([hidden]){display:block}
     body.no-scroll{position:fixed;width:100%}
 
-    /* FAB language (synced with header) */
-    .lang-fab{position:fixed;top:calc(var(--header-h) + 10px);right:14px;z-index:1100;display:flex;gap:6px;padding:4px;border:1px solid #e2e8f0;border-radius:999px;background:#ffffffcc;backdrop-filter: blur(8px);box-shadow:0 10px 26px rgba(2,8,20,.12)}
-    .lang-fab .lang-btn{padding:6px 10px}
-
     /* ===== Hero ===== */
-    .hero{position:relative;overflow:hidden;display:grid;place-items:center;text-align:center;color:#fff;min-height:clamp(420px,60vh,620px);padding-top:var(--header-h);background:linear-gradient(180deg,rgba(0,0,0,.35),rgba(0,0,0,.6)), url('https://img2.pic.in.th/pic/thumbnail-6.jpg') center/cover no-repeat}
+    .hero{
+      position:relative;overflow:hidden;display:grid;place-items:center;text-align:center;color:#fff;
+      min-height:clamp(420px,60vh,620px);padding-top:var(--header-h);
+      background:
+        linear-gradient(180deg, rgba(0,0,0,.35), rgba(0,0,0,.6)),
+        url('https://img2.pic.in.th/pic/thumbnail-6.jpg') center/cover no-repeat;
+      isolation:isolate;
+    }
     .hero-inner{position:relative;z-index:1;padding:26px 16px;max-width:var(--container);width:100%}
     .hero h1{margin:0 0 10px;font-weight:800;font-size:clamp(26px,4.2vw,44px);text-shadow:0 6px 28px rgba(0,0,0,.45)}
     .hero p{max-width:980px;margin:0 auto;color:#e6f2ef}
+
+    /* Back button on hero */
+    .back-wrap{position:absolute; left:16px; top:calc(var(--header-h) + 12px); z-index:3; display:flex; align-items:center; gap:8px}
+    .btn.back{display:inline-flex; align-items:center; gap:8px; background:#ffffff22; border:1px solid rgba(255,255,255,.55); color:#fff; padding:8px 12px; border-radius:12px; font-weight:800; text-decoration:none; backdrop-filter: blur(6px)}
+    .btn.back:hover{ background:#ffffff33 }
+    .btn.back svg{width:18px; height:18px; display:block}
 
     /* ===== Layout ===== */
     .wrap{max-width:var(--container);margin:auto;padding:34px 16px}
@@ -141,7 +175,7 @@
   </style>
 </head>
 <body>
-  <!-- ===== Header ===== -->
+  <!-- ===== HEADER (Nickel style) ===== -->
   <header class="site-header" id="siteHeader" role="banner" aria-label="Site header">
     <div class="header-inner">
       <a class="brand" href="/" aria-label="Baume Chemical">
@@ -150,17 +184,30 @@
       </a>
 
       <div class="header-right">
+        <!-- Primary Nav -->
         <nav id="primary-nav" class="primary-nav" aria-label="Primary" aria-hidden="true">
           <ul class="menu">
-          <li><a href="https://www.baumechemical.com/index.html" class="nav-link">Home</a></li>
-          <li><a href="https://www.baumechemical.com/about-us.html" class="nav-link">About us</a></li>
-          <li><a href="https://www.baumechemical.com/products.html" class="nav-link" aria-current="page">Products</a></li>
-          <li><a href="https://www.baumechemical.com/contact-us.html" class="nav-link">Contact Us</a></li>
+            <li><a href="https://www.baumechemical.com/index.html" class="nav-link">Home</a></li>
+            <li><a href="https://www.baumechemical.com/about-us.html" class="nav-link">About us</a></li>
+            <li><a href="https://www.baumechemical.com/products.html" class="nav-link" aria-current="page">Products</a></li>
+            <li><a href="https://www.baumechemical.com/contact-us.html" class="nav-link">Contact Us</a></li>
+
+            <!-- Mobile: language switcher INSIDE menu -->
+            <li class="lang-li">
+              <div class="lang-group" role="group" aria-label="Language switcher">
+                <button class="lang-btn" data-lang="th" aria-pressed="true" title="ภาษาไทย">
+                  <img class="flag" src="https://flagcdn.com/24x18/th.png" srcset="https://flagcdn.com/48x36/th.png 2x" alt="TH"><span>ไทย</span>
+                </button>
+                <button class="lang-btn" data-lang="en" aria-pressed="false" title="English">
+                  <img class="flag" src="https://flagcdn.com/24x18/gb.png" srcset="https://flagcdn.com/48x36/gb.png 2x" alt="EN"><span>EN</span>
+                </button>
+              </div>
+            </li>
           </ul>
         </nav>
 
-        <!-- Header language switch -->
-        <div class="lang-switch" role="group" aria-label="Language switcher">
+        <!-- Desktop: language switcher BESIDE menu -->
+        <div class="lang-inline" role="group" aria-label="Language switcher">
           <button class="lang-btn" data-lang="th" aria-pressed="true" title="ภาษาไทย">
             <img class="flag" src="https://flagcdn.com/24x18/th.png" srcset="https://flagcdn.com/48x36/th.png 2x" alt="TH"><span>ไทย</span>
           </button>
@@ -169,6 +216,7 @@
           </button>
         </div>
 
+        <!-- Hamburger -->
         <button class="nav-toggle" aria-label="Toggle navigation" aria-expanded="false" aria-controls="primary-nav">
           <span class="bar" aria-hidden="true"></span>
         </button>
@@ -177,8 +225,16 @@
   </header>
   <div class="menu-scrim" hidden></div>
 
-  <!-- ===== Hero ===== -->
+  <!-- ===== HERO ===== -->
   <section class="hero" aria-label="Customer Service hero">
+    <!-- Back button -->
+    <div class="back-wrap">
+      <a href="#" class="btn back" id="backBtn">
+        <svg viewBox="0 0 24 24" fill="none" aria-hidden="true"><path d="M15 18l-6-6 6-6" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
+        <span data-i18n-key="btn_back">ย้อนกลับ</span>
+      </a>
+    </div>
+
     <div class="hero-inner">
       <h1 data-i18n-key="hero_title">บริการลูกค้า</h1>
       <p data-i18n-key="hero_tagline">วิเคราะห์สารละลาย ตรวจโลหะปนเปื้อน (AA Test) ทดสอบ Salt Spray และที่ปรึกษากระบวนการชุบ โดยทีมชำนาญการ 30+ ปี</p>
@@ -281,9 +337,9 @@
     </div>
   </footer>
 
-  <!-- ===== JS: header glass, mobile nav (scrim+lock), reveal, i18n + meta sync ===== -->
+  <!-- ===== JS: header state, mobile menu, reveal, back btn, i18n ===== -->
   <script>
-    // Header glass + dynamic height
+    // Header scrolled state + dynamic height
     (function(){
       const header = document.getElementById('siteHeader');
       const setH = ()=>{ const h = header ? Math.round(header.getBoundingClientRect().height) : 64; document.documentElement.style.setProperty('--header-h', h + 'px'); };
@@ -294,7 +350,7 @@
       setH(); onScroll();
     })();
 
-    // Mobile nav: scrim + body lock + highlight current
+    // Mobile nav: scrim + body lock + close on click/escape
     (function(){
       const header = document.getElementById('siteHeader');
       const toggle = header?.querySelector('.nav-toggle');
@@ -324,9 +380,9 @@
         scrim.addEventListener('click', ()=> openMenu(false));
         document.addEventListener('keydown', (e)=>{ if(e.key==='Escape' && header.classList.contains('open')) openMenu(false); });
         window.addEventListener('resize', ()=>{ if (window.innerWidth > 920 && header.classList.contains('open')) openMenu(false); }, {passive:true});
-        header.querySelectorAll('.menu a').forEach(a => a.addEventListener('click', ()=> openMenu(false)));
+        header.querySelectorAll('.menu a, .menu .lang-btn').forEach(el => el.addEventListener('click', ()=> openMenu(false)));
       }
-      // highlight "Products" when under /products
+      // highlight Products when under /products
       try{
         const here = location.pathname.replace(/\/+$/,'');
         document.querySelectorAll('.menu a').forEach(a=>{
@@ -349,9 +405,23 @@
       els.forEach(el=>io.observe(el));
     })();
 
-    // i18n + meta sync
+    // Back button on hero (with same-origin fallback)
+    (function(){
+      const btn = document.getElementById('backBtn'); if(!btn) return;
+      btn.addEventListener('click', function(e){
+        e.preventDefault();
+        try{
+          const ref=document.referrer;
+          if(ref && new URL(ref).origin===location.origin){ history.back(); return; }
+        }catch(_){}
+        location.href='https://www.baumechemical.com/';
+      });
+    })();
+
+    // i18n + meta sync + language buttons (desktop + mobile)
     const I18N = {
       th:{
+        btn_back:"ย้อนกลับ",
         meta_title:"บริการลูกค้า | Baume Chemical",
         meta_desc:"บริการลูกค้า Baume Chemical: วิเคราะห์สารละลาย ตรวจโลหะปนเปื้อน (AA Test) ทดสอบสเปรย์ซอลต์ และที่ปรึกษากระบวนการชุบ โดยทีมมากประสบการณ์ 30+ ปี มาตรฐานแม่นยำเชื่อถือได้",
         og_title:"บริการลูกค้า | Baume Chemical",
@@ -376,6 +446,7 @@
         footer_copy:"© 2025 Baume Chemical. All rights reserved."
       },
       en:{
+        btn_back:"Back",
         meta_title:"Customer Service | Baume Chemical",
         meta_desc:"Solution analysis, AA metal testing, salt spray testing, and plating process consulting by a team with 30+ years’ experience.",
         og_title:"Customer Service | Baume Chemical",
@@ -402,7 +473,7 @@
     };
 
     const els = {
-      langBtns: ()=>document.querySelectorAll('.lang-btn'), // header + FAB
+      langBtns: ()=>document.querySelectorAll('.lang-btn'), // desktop + mobile
       translatables: ()=>document.querySelectorAll('[data-i18n-key]'),
       metaTitle: document.getElementById('metaTitle'),
       metaDesc: document.getElementById('metaDesc'),
@@ -417,7 +488,7 @@
       const L = (lang==='en') ? 'en' : 'th';
       document.documentElement.lang = L;
 
-      // sync header + FAB buttons
+      // toggle pressed state for ALL language buttons
       els.langBtns().forEach(btn => btn.setAttribute('aria-pressed', String(btn.dataset.lang === L)));
 
       // translate text nodes
