--- a/products/platingcoating/tinplating/index.html
+++ b/products/platingcoating/tinplating/index.html
@@ -8,7 +8,7 @@
   <!-- SEO base -->
   <meta name="description" content="BASn 4140 น้ำยาชุบดีบุกเงาคุณภาพสูง: สัดส่วนการผสม ขั้นตอนการชุบ พารามิเตอร์การทำงาน อุปกรณ์ที่จำเป็น และเหตุผลที่ควรใช้แอโนดดีบุกบริสุทธิ์ 99.9%">
   <meta name="robots" content="index,follow,max-snippet:-1,max-image-preview:large,max-video-preview:-1">
-  <link rel="canonical" href="https://www.baumechemical.com/blog/basn-4140-bright-tin-guide/">
+  <link rel="canonical" href="https://www.baumechemical.com/products/platingcoating/tinplating/index.html">
   <meta name="theme-color" content="#2c5e4e">
 
   <!-- Open Graph -->
@@ -16,8 +16,8 @@
   <meta property="og:site_name" content="Baume Chemical">
   <meta property="og:title" content="คู่มือ BASn 4140 — น้ำยาชุบดีบุกเงา">
   <meta property="og:description" content="สัดส่วนการผสม ขั้นตอนชุบ พารามิเตอร์ อุปกรณ์ และเหตุผลที่ใช้ Tin Anode 99.9%">
-  <meta property="og:url" content="https://www.baumechemical.com/blog/basn-4140-bright-tin-guide/">
-  <meta property="og:image" content="https://i.imgur.com/3mWQsKe.jpeg">
+  <meta property="og:url" content="https://www.baumechemical.com/products/platingcoating/tinplating/index.html">
+  <meta property="og:image" content="https://img5.pic.in.th/file/secure-sv1/thumbnail1.jpg">
   <meta name="twitter:card" content="summary_large_image">
 
   <!-- Fonts & Perf -->
@@ -25,7 +25,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="preconnect" href="https://flagcdn.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@400;600;800&display=swap" rel="stylesheet">
-  <link rel="preload" as="image" href="https://i.imgur.com/3mWQsKe.jpeg"/>
+  <link rel="preload" as="image" href="https://img5.pic.in.th/file/secure-sv1/thumbnail1.jpg"/>
 
   <style>
     :root{
@@ -78,7 +78,7 @@
     body.no-scroll{position:fixed;width:100%}
 
     /* ===== Hero ===== */
-    .hero{position:relative;overflow:hidden;display:grid;place-items:center;text-align:center;color:#fff;min-height:clamp(420px,60vh,620px);background:linear-gradient(180deg,rgba(0,0,0,.35),rgba(0,0,0,.6)),url('https://i.imgur.com/3mWQsKe.jpeg') center/cover no-repeat;padding:28px 16px;padding-top:calc(var(--header-h) + 12px)}
+    .hero{position:relative;overflow:hidden;display:grid;place-items:center;text-align:center;color:#fff;min-height:clamp(420px,60vh,620px);background:linear-gradient(180deg,rgba(0,0,0,.35),rgba(0,0,0,.6)),url('https://img5.pic.in.th/file/secure-sv1/thumbnail1.jpg') center/cover no-repeat;padding:28px 16px;padding-top:calc(var(--header-h) + 12px)}
     .hero h1{margin:6px 0 10px;font-weight:800;font-size:clamp(26px,4.2vw,44px);text-shadow:0 6px 28px rgba(0,0,0,.45)}
     .hero p{max-width:980px;margin:0 auto;color:#e6f2ef}
     .back-chip{position:absolute;top:calc(var(--header-h) + 10px);left:16px;z-index:1;display:inline-flex;align-items:center;gap:6px;padding:8px 12px;border-radius:999px;font-weight:800;text-decoration:none;background:#fff;border:1px solid rgba(2,8,20,.08);color:#0f172a;box-shadow:var(--shadow-1)}
